feat: add sos_posts APIs
